--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,16 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: Alexander Schenk
+  tagline: STEM Educator & Student Council Advisor, St. Louis City
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
+    twitter: @alexjschenk
+    github:  ajs1592
+    linkedIn: in/alexander-schenk-75397012a/
     rss: rss
     # dribbble: jekyll
     # facebook: jekyll
