--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: @alexjschenk
+    twitter: alexjschenk
     github:  ajs1592
     linkedIn: in/alexander-schenk-75397012a/
     rss: rss
