--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,10 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Alexander Schenk
-  tagline: STEM Educator & Student Council Advisor, St. Louis City
+  tagline: STEM Educator
+  
+  Student Council Advisor
+  St. Louis City
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
