--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ plainwhite:
   name: Alexander Schenk
   tagline: STEM Educator
   
-  Student Council Advisor
+  \nStudent Council Advisor
   St. Louis City
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
