--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Alexander Schenk
-  tagline: STEM Educator
-  
-  \nStudent Council Advisor
-  
+  tagline: STEM Educator \nStudent Council Advisor
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
